Bug 169154 - FILTER DOC: Files are reported as "corrupted" but can be opened nevertheless
Summary: FILTER DOC: Files are reported as "corrupted" but can be opened nevertheless
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Kohei Yoshida
URL:
Whiteboard: target:26.8.0 target:26.2.0.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2025-10-30 14:25 UTC by Regina Henschel
Modified: 2025-12-24 14:13 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
files with the described problem (65.79 KB, application/x-zip-compressed)
2025-10-30 14:25 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2025-10-30 14:25:43 UTC
Created attachment 203623 [details]
files with the described problem

Unpack the attached archive.
The contained doc-files have this problem:

When you open the file you get a message, "The file ... is corrupt and therefore cannot be opened."

If you click on button `No` of the question to repair the file, you get a message, "could not be repaired and therefore cannot be opened". Click on button `OK`. The file opens and the content is there.

If you click on button `Yes` of the question to repair the file, you get the same message, "could not be repaired and therefore cannot be opened". Click on button `OK`. The file does not open.

There is something wrong in detection of "corrupt".
Comment 1 m_a_riosv 2025-10-30 23:30:42 UTC
Reproducible
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 620(Build:0)
CPU threads: 16; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: threaded


Latest version that works on the ones I have installed.
Version: 25.8.4.0.0+ (X86_64) / LibreOffice Community
Build ID: d8d4320a6420ea623f613203cc508a90e8d3c494
CPU threads: 16; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Comment 2 raal 2025-10-31 20:37:11 UTC
This seems to have begun at the below commit in bibisect repository/OS linux-64-26.2.
Adding Cc: to Kohei Yoshida ; Could you possibly take a look at this one?
Thanks
 8fece65225707ae1cf38d3bffafa83b5b8f0a7a4 is the first bad commit
commit 8fece65225707ae1cf38d3bffafa83b5b8f0a7a4
Author: Jenkins Build User <tdf@maggie.tdf>
Date:   Sat Aug 23 15:50:55 2025 +0200

    source cd347097f726eae68fa819fe244d0bedf13832e9

190042: Automatically map generic JSON and XML documents to Calc | https://gerrit.libreoffice.org/c/core/+/190042
Comment 3 Kohei Yoshida 2025-12-23 01:27:34 UTC
BTW, these documents are actually docx files, not doc the binary ones.
Comment 4 Kohei Yoshida 2025-12-23 03:30:19 UTC
This should fix it: https://gerrit.libreoffice.org/c/core/+/196142
Comment 5 Commit Notification 2025-12-23 03:31:22 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d669c1b3df498928a63e1d1e08c534d660a04b6d

tdf#169154: Use detected type even if it differs from requested type

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2025-12-24 04:34:48 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/86d5006eed139df3bc0a03cea1c567929caef73e

tdf#169154: Use detected type even if it differs from requested type

It will be available in 26.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2025-12-24 14:13:49 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d41090ffd14261387ccf0f221a3a14ef9d9e00fd

tdf#169154: filter_textfilterdetect: Add test

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.