tdf#169154: Use detected type even if it differs from requested type

This restores the previous logic where the type reported by the
detector was used even if it differs from the type being requested.
This is a partial revert of commit cd347097f726eae68fa819fe244d0bedf13832e9.
This at least makes the reported problem go away.

Change-Id: Ic33385a3b1fb1c538cd8e79bcf1b7ab3f4ee904e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/196142
Reviewed-by: Kohei Yoshida <kohei@libreoffice.org>
Tested-by: Jenkins
(cherry picked from commit d669c1b3df498928a63e1d1e08c534d660a04b6d)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/196181